--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="colorlib-navbar-brand">
-							<a class="colorlib-logo" href="index.html">Ankit Saxena</a>
+							<a class="colorlib-logo" href="index.html">Reply's Site</a>
 						</div>
 						<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 					</div>
@@ -90,8 +90,8 @@
 			   			<div class="row">
 				   			<div class="col-md-8 col-sm-12 col-md-offset-2 col-md-pull-2 slider-text">
 				   				<div class="slider-text-inner">
-				   					<h2>Welcome &amp; Enjoy</h2>
-				   					<h1>Welcome to The Home Page</h1>
+				   					<h2>Bienvenue &amp; Profitez</h2>
+				   					<h1>Bienvenue sur la page d'accueil</h1>
 										<p><a class="btn btn-primary btn-learn">Ciao!</a></p>
 				   				</div>
 				   			</div>
