--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 	</head>
 	<body>
 
+<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+
 	<nav id="colorlib-main-nav" role="navigation">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
 		<div class="js-fullheight colorlib-table">
@@ -124,5 +126,6 @@
 	<script src="js/main.js"></script>
 
 	</body>
+
 </html>
 
